# ros2

./: .gitignore  .gitmodules  README.md  README.zh.md  franka_project_progress.md  readme.md  readme.zh.md  官方UR配置分析.md  配置对比分析报告.md
gazebo_worlds/: CMakeLists.txt  package.xml
gazebo_worlds/launch/: gazebo.launch.py
gazebo_worlds/worlds/: pick_place.world
main_controller/: package.xml  setup.cfg  setup.py
main_controller/main_controller/: main_controller.py
move_node/: package.xml  setup.py
move_node/config/: fr3_gazebo_controllers.yaml
move_node/launch/: gazebo_sim.launch.py
move_node/move_node/: debug_joint_controller.py  gripper_controller.py  gripper_controller_old.py  joint_controller.py  position_controller.py  robot_arm_controller.py  robot_config.py
my_franka_project/: CMakeLists.txt  package.xml
my_franka_project/config/: controllers.yaml  fr3_gazebo.urdf.xacro  fr3_gazebo_controllers.yaml  fr3_gazebo_moveit_controllers.yaml  franka_arm_gazebo.ros2_control.xacro  gazebo_ros2_controllers.yaml
my_franka_project/description/: fr3_gazebo.urdf.xacro
my_franka_project/launch/: fr3_gazebo.launch.py  fr3_moveit_gazebo.launch.py  fr3_moveit_only.launch.py  franka_sim_gazebo.launch.py  franka_sim_moveit.launch.py
my_franka_project/rviz/: fr3.rviz
my_franka_project/scripts/: franka_action_controller.py  test_franka_control.py  test_moveit_gazebo.py
my_gazebo_simulation/: CMakeLists.txt  package.xml
my_gazebo_simulation/config/: ur_robotiq_controllers.yaml
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5e_with_robotiq.ros2_control.xacro  ur5e_with_robotiq.srdf  ur5e_with_robotiq.urdf.xacro
my_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur_moveit_sim.launch.py  warehouse_db.launch.py
my_moveit_planner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
my_moveit_planner/my_moveit_planner/: joint_controller.py
my_robot_cell/: package.xml  setup.cfg  setup.py
my_robot_controller/main_controller/: package.xml
my_robot_controller/main_controller/main_controller/: main_controller.py
my_robot_controller/move_node/: setup.cfg
my_robot_controller/move_node/move_node/: joint_controller.py  position_controller.py  robot_arm_controller.py
my_robot_controller/robot_common/: setup.cfg  setup.py
my_robot_controller/robot_common/robot_common/: __init__.py  arm_geometry.py  camera_config.py  concave_down_analysis.py  connection_base.py
my_robot_controller/vision_node/: package.xml  setup.py
my_robot_controller/vision_node/vision_node/: camera_node.py  object_detector.py  position_detector_test.py  simple_vision_test.py  vision_api.py  vision_demo.py  vision_robot_controller.py
my_robot_description/: package.xml
my_ur_description/: CMakeLists.txt  package.xml
my_ur_description/urdf/: ur_robotiq_85.urdf.xacro
my_vision_node/: package.xml  setup.cfg  setup.py
robot_common/: package.xml
robot_common/robot_common/: robot_state.py
scene_manager/: package.xml  setup.cfg  setup.py
scene_manager/scene_manager/: scene_manager.py
ur5_gripper_config/: CMakeLists.txt  package.xml
ur5_gripper_config/config/: gripper_controllers.yaml  ur5_gripper_controllers.yaml
ur5_gripper_config/launch/: ur5_gripper_moveit.launch.py  ur5_gripper_simulation.launch.py
ur5_gripper_config/urdf/: camera_mount.xacro  robotiq_2f85.xacro  ur5_with_gripper.urdf.xacro
ur_description_custom/: CMakeLists.txt  package.xml
ur_description_custom/launch/: test_ur5e_robotiq.launch.py
ur_description_custom/urdf/: ur5_robotiq_85.ros2_control.xacro  ur5_robotiq_85.urdf.xacro  ur5_robotiq_85_macro.xacro  ur5e_robotiq_85.urdf.xacro
ur_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_robotiq_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5_with_robotiq.ros2_control.xacro  ur5_with_robotiq.srdf  ur5e_robotiq_gazebo.ros2_control.xacro
ur_robotiq_moveit_config/launch/: move_group.launch.py  my_ur_sim_control.launch.py  rsp.launch.py  ur5e_robotiq_gazebo_moveit.launch.py  ur5e_sim_moveit.launch.py
ur_vision_system/: package.xml  setup.cfg  setup.py
ur_vision_system/launch/: empty_gazebo.launch.py  simple_camera_spawn.launch.py  spawn_random_objects.launch.py  spawn_test_cylinder.launch.py  ur_vision_sim.launch.py
ur_vision_system/models/test_box/: model.config  model.sdf
ur_vision_system/models/test_cylinder/: model.config  model.sdf
ur_vision_system/models/test_prism/: model.config  model.sdf
ur_vision_system/models/world_camera/: model.config  model.sdf
ur_vision_system/urdf/: world_camera.urdf.xacro
vision_node/: setup.py
vision_node/vision_node/: vision_base.py
