<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_moveit_planner</name>
  <version>0.0.0</version>
  <description>Robot arm motion planning and control package</description>
  <maintainer email="x93hu@uwaterloo.ca">xichen</maintainer>
  <license>Apache-2.0</license>

  <!-- Python and MoveIt dependencies -->
  <depend>rclpy</depend>
  <depend>moveit_commander</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>