# robot_common/package.xml
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_common</name>
  <version>0.0.0</version>
  <description>Common utilities for robot control</description>
  <maintainer email="x93hu@uwaterloo.ca">xichen</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

---

# robot_common/setup.py
from setuptools import find_packages, setup

package_name = 'robot_common'

setup(
    name=package_name,
    version='0.0.0',
    packages=find_packages(exclude=['test']),
    data_files=[
        ('share/ament_index/resource_index/packages',
            ['resource/' + package_name]),
        ('share/' + package_name, ['package.xml']),
    ],
    install_requires=['setuptools'],
    zip_safe=True,
    maintainer='xichen',
    maintainer_email='x93hu@uwaterloo.ca',
    description='Common utilities for robot control',
    license='Apache-2.0',
    tests_require=['pytest'],
    entry_points={
        'console_scripts': [
            # No executable scripts in this package
        ],
    },
)

---

# robot_common/setup.cfg
[develop]
script_dir=$base/lib/robot_common
[install]
install_scripts=$base/lib/robot_common

---

# robot_common/robot_common/__init__.py
"""Common utilities for robot control"""

from .connection_base import RobotConnectionBase
from .robot_state import RobotStateManager

__all__ = ['RobotConnectionBase', 'RobotStateManager']