<?xml version="1.0"?>
<package format="3">
  <name>ur_description_custom</name>
  <version>1.0.0</version>
  <description>Custom UR5e with Robotiq 85 gripper description</description>
  <maintainer email="x93hu@uwaterloo.ca">xichen</maintainer>
  <license>Apache-2.0</license>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>robotiq_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>